Started on question 2

--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -21,7 +21,7 @@
       "source": [
         "**Q1.** This question provides some practice cleaning variables which have common problems.\n",
         "1. Numeric variable: For `./data/airbnb_hw.csv`, clean the `Price` variable as well as you can, and explain the choices you make. How many missing values do you end up with? (Hint: What happens to the formatting when a price goes over 999 dollars, say from 675 to 1,112?)\n",
-        "2. Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing? \n",
+        "2. Categorical variable: For the Minnesota police use of for data, `./data/mn_police_use_of_force.csv`, clean the `subject_injury` variable, handling the NA's; this gives a value `Yes` when a person was injured by police, and `No` when no injury occurred. What proportion of the values are missing? Is this a concern? Cross-tabulate your cleaned `subject_injury` variable with the `force_type` variable. Are there any patterns regarding when the data are missing?\n",
         "3. Dummy variable: For the pretrial data covered in the lecture, clean the `WhetherDefendantWasReleasedPretrial` variable as well as you can, and, in particular, replace missing values with `np.nan`.\n",
         "4. Missing values, not at random: For the pretrial data covered in the lecture, clean the `ImposedSentenceAllChargeInContactEvent` variable as well as you can, and explain the choices you make. (Hint: Look at the `SentenceTypeAllChargesAtConvictionInContactEvent` variable.)"
       ]
@@ -29,7 +29,9 @@
     {
       "cell_type": "markdown",
       "id": "5a60a44e",
-      "metadata": {},
+      "metadata": {
+        "id": "5a60a44e"
+      },
       "source": [
         "**Q2.** Go to https://sharkattackfile.net/ and download their dataset on shark attacks.\n",
         "\n",
@@ -43,6 +45,271 @@
         "8. Are sharks more likely to launch unprovoked attacks on men or women? Is the attack more or less likely to be fatal when the attack is provoked or unprovoked? Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?\n",
         "9. What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "metadata": {
+        "id": "8yd_2lXDkkv2"
+      },
+      "id": "8yd_2lXDkkv2",
+      "execution_count": 7,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 1. Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n",
+        "\n",
+        "df = pd.read_excel('GSAF5.xls')\n"
+      ],
+      "metadata": {
+        "id": "aDtB64OXBlL_"
+      },
+      "id": "aDtB64OXBlL_",
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#2 Drop any columns that do not contain data.\n",
+        "\n",
+        "updated = df.dropna(axis = 1, how = 'all')\n",
+        "#updated.head()\n",
+        "\n",
+        "#print(len(df. columns))\n",
+        "#print(len(updated. columns))\n",
+        "#updated[updated['original order'].notna()]"
+      ],
+      "metadata": {
+        "id": "5Lr4Y8dxFM2t"
+      },
+      "id": "5Lr4Y8dxFM2t",
+      "execution_count": 41,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#3 Clean the year variable.\n",
+        "# Describe the range of values you see.\n",
+        "updated['Year'].describe()\n",
+        "# There is a range from 0 to 2026, with a std of 272.082794 and mean of 1935.018598\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "9JcZaoxyL_5n",
+        "outputId": "0bc20fe4-dbfc-4216-d4be-8d67ddb09ea2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 335
+        }
+      },
+      "id": "9JcZaoxyL_5n",
+      "execution_count": 42,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count    6990.000000\n",
+              "mean     1935.018598\n",
+              "std       272.082794\n",
+              "min         0.000000\n",
+              "25%      1947.000000\n",
+              "50%      1986.000000\n",
+              "75%      2009.000000\n",
+              "max      2026.000000\n",
+              "Name: Year, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>6990.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1935.018598</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>272.082794</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>0.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>1947.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>1986.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>2009.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>2026.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 42
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Filter the rows to focus on attacks since 1940.\n",
+        "updated = updated[updated['Year'] >= 1940]\n",
+        "updated['Year'].describe()"
+      ],
+      "metadata": {
+        "id": "t_runTABOCtq",
+        "outputId": "9ff60eaa-7fbb-4815-94f1-c065397966e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 335
+        }
+      },
+      "id": "t_runTABOCtq",
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "count    5458.000000\n",
+              "mean     1991.937156\n",
+              "std        24.083712\n",
+              "min      1940.000000\n",
+              "25%      1969.000000\n",
+              "50%      2000.000000\n",
+              "75%      2013.000000\n",
+              "max      2026.000000\n",
+              "Name: Year, dtype: float64"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Year</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>5458.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>1991.937156</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>24.083712</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>1940.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>1969.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>2000.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>2013.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>2026.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div><br><label><b>dtype:</b> float64</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 50
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Are attacks increasing, decreasing, or remaining constant over time?\n",
+        "\n",
+        "updated.corr()"
+      ],
+      "metadata": {
+        "id": "hQnwR8uDO0tV"
+      },
+      "id": "hQnwR8uDO0tV",
+      "execution_count": 51,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "SBGhdWS_L_U8"
+      },
+      "id": "SBGhdWS_L_U8"
     },
     {
       "cell_type": "markdown",
