--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -62,6 +62,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "1. Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n"
+      ],
+      "metadata": {
+        "id": "fw3-ZTMmJkRm"
+      },
+      "id": "fw3-ZTMmJkRm"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 1. Open the shark attack file using Pandas. It is probably not a csv file, so `read_csv` won't work.\n",
@@ -74,6 +84,16 @@
       "id": "aDtB64OXBlL_",
       "execution_count": 4,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "2. Drop any columns that do not contain data.\n"
+      ],
+      "metadata": {
+        "id": "iUX1blJ9JqBK"
+      },
+      "id": "iUX1blJ9JqBK"
     },
     {
       "cell_type": "code",
@@ -95,6 +115,16 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "3. Clean the year variable.\n"
+      ],
+      "metadata": {
+        "id": "r_L3wYfoJxIR"
+      },
+      "id": "r_L3wYfoJxIR"
+    },
+    {
       "cell_type": "code",
       "source": [
         "#3 Clean the year variable.\n",
@@ -114,6 +144,16 @@
       "id": "9JcZaoxyL_5n",
       "execution_count": 6,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Filter the rows to focus on attacks since 1940."
+      ],
+      "metadata": {
+        "id": "NJLQ8e4KJ1YZ"
+      },
+      "id": "NJLQ8e4KJ1YZ"
     },
     {
       "cell_type": "code",
@@ -213,6 +253,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Are attacks increasing, decreasing, or remaining constant over time?"
+      ],
+      "metadata": {
+        "id": "uo1T7VF3J3_k"
+      },
+      "id": "uo1T7VF3J3_k"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Are attacks increasing, decreasing, or remaining constant over time?\n",
@@ -281,6 +331,28 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Attacks seem to be increasing over time. There is a dip in 2025 because those full years have not happened yet.\n",
+        "\n",
+        "1960s have a huge spike but overall it seems attacks have increased over time"
+      ],
+      "metadata": {
+        "id": "lrsAU2wlJ-Fi"
+      },
+      "id": "lrsAU2wlJ-Fi"
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "4. Clean the Age variable and make a histogram of the ages of the victims.\n"
+      ],
+      "metadata": {
+        "id": "AjqB0jqtKEhY"
+      },
+      "id": "AjqB0jqtKEhY"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 4 Clean the Age variable and make a histogram of the ages of the victims.\n",
@@ -327,6 +399,18 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "5. What proportion of victims are male?\n",
+        "\n",
+        "      The proportion is 2981: 544 (M:F)"
+      ],
+      "metadata": {
+        "id": "PaqpiBnNKeJ2"
+      },
+      "id": "PaqpiBnNKeJ2"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 5 What proportion of victims are male?\n",
@@ -340,7 +424,7 @@
         "\n",
         "gender_filtered\n",
         "\n",
-        "# The proportion is 2981: 544 (M:F) or 2981 :\n",
+        "# The proportion is 2981: 544 (M:F)\n",
         "\n",
         "# Filtering out the other values\n",
         "gender_filtered.drop(gender_filtered[gender_filtered['Sex'] == 'lli'].index, inplace=True)\n",
@@ -414,6 +498,22 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "6. Clean the Type variable so it only takes three values: Provoked and Unprovoked and Unknown. What proportion of attacks are unprovoked?\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "Unprovoked attacks make up 2956/3557 attacks"
+      ],
+      "metadata": {
+        "id": "wOuIFgioKq52"
+      },
+      "id": "wOuIFgioKq52"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 6 Clean the Type variable so it only takes three values: Provoked and Unprovoked and Unknown. What proportion of attacks are unprovoked?\n",
@@ -433,11 +533,11 @@
       ],
       "metadata": {
         "id": "ssFltkNsj1Mm",
-        "outputId": "f774ded8-b7be-42ee-aa12-adcf0c6efe1b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209
-        }
+        },
+        "outputId": "f774ded8-b7be-42ee-aa12-adcf0c6efe1b"
       },
       "id": "ssFltkNsj1Mm",
       "execution_count": 32,
@@ -502,6 +602,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "7. Clean the `Fatal Y/N` variable so it only takes three values: Y, N, and Unknown.\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qwe3KxqWK-wa"
+      },
+      "id": "qwe3KxqWK-wa"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# 7. Clean the `Fatal Y/N` variable so it only takes three values: Y, N, and Unknown.\n",
@@ -522,11 +635,11 @@
       ],
       "metadata": {
         "id": "fRbyrNEiyqr9",
-        "outputId": "1b5500b2-9b5c-4360-d3c5-84ff50b87e5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 209
-        }
+        },
+        "outputId": "1b5500b2-9b5c-4360-d3c5-84ff50b87e5b"
       },
       "id": "fRbyrNEiyqr9",
       "execution_count": 34,
@@ -591,9 +704,19 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "8. A: Are sharks more likely to launch unprovoked attacks on men or women?"
+      ],
+      "metadata": {
+        "id": "sVE2q2BLLFr2"
+      },
+      "id": "sVE2q2BLLFr2"
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# 8. Are sharks more likely to launch unprovoked attacks on men or women?\n",
+        "# 8. A: Are sharks more likely to launch unprovoked attacks on men or women?\n",
         "\n",
         "fatal_changed[['Type', 'Sex' ]].value_counts()\n",
         "\n",
@@ -602,11 +725,11 @@
       ],
       "metadata": {
         "id": "_0lYzsBdyusI",
-        "outputId": "f6a48d1b-4c7b-4000-bb41-366ce332b704",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "outputId": "f6a48d1b-4c7b-4000-bb41-366ce332b704"
       },
       "id": "_0lYzsBdyusI",
       "execution_count": 38,
@@ -692,24 +815,37 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "B: Is the attack more or less likely to be fatal when the attack is provoked or unprovoked?\n",
+        "\n",
+        "\n",
+        "  the attack is less likely to be fatal when it is provoked (8/291 = ~2.7%) than unprovoked (482/2956 = ~16%)\n"
+      ],
+      "metadata": {
+        "id": "JZ3Jk-s_LIxW"
+      },
+      "id": "JZ3Jk-s_LIxW"
+    },
+    {
       "cell_type": "code",
       "source": [
         "# Is the attack more or less likely to be fatal when the attack is provoked or unprovoked?\n",
         "\n",
         "fatal_changed[['Type', 'Fatal Y/N' ]].value_counts()\n",
         "\n",
-        "\n"
+        "# the attack is less likely to be fatal when it is provoked (8/291 = ~2.7%) than unprovoked (482/2956 = ~16%)\n"
       ],
       "metadata": {
-        "id": "BLPoNhl-Azpq",
-        "outputId": "fb99e2a3-d958-475b-d5dc-b3e5c08793d8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 397
-        }
+        },
+        "id": "BLPoNhl-Azpq",
+        "outputId": "751ac5d1-a6b5-4d56-b3a0-8ff777bda090"
       },
       "id": "BLPoNhl-Azpq",
-      "execution_count": 39,
+      "execution_count": 41,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,9 +939,23 @@
             ]
           },
           "metadata": {},
-          "execution_count": 39
+          "execution_count": 41
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "C: Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?\n",
+        "\n",
+        "It is more likely to be fatal when a male (438/2981 = ~15%) is a victim than female (73/544 = ~13%).\n",
+        "\n",
+        "I still feel sharks are cool creatures. Their kill rate is not that high. People should be more careful about where they swim. The mail versus female ratio isn't different enough for me, as a male, to be concerned they are targetting men.\n"
+      ],
+      "metadata": {
+        "id": "vqTKuTcfLpyu"
+      },
+      "id": "vqTKuTcfLpyu"
     },
     {
       "cell_type": "code",
@@ -813,15 +963,18 @@
         "# Is it more or less likely to be fatal when the victim is male or female? How do you feel about sharks?\n",
         "\n",
         "\n",
-        "fatal_changed[['Sex', 'Fatal Y/N' ]].value_counts()\n"
+        "fatal_changed[['Sex', 'Fatal Y/N' ]].value_counts()\n",
+        "\n",
+        "\n",
+        "# It is more likely to be fatal when a male (438/2981 = ~15%) is a victim than female (73/544 = ~13%)\n"
       ],
       "metadata": {
-        "id": "0ByGUrNlA5YR",
-        "outputId": "4f9445d1-b08b-487e-cdc6-67da38430ba3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 303
-        }
+        },
+        "id": "0ByGUrNlA5YR",
+        "outputId": "4f9445d1-b08b-487e-cdc6-67da38430ba3"
       },
       "id": "0ByGUrNlA5YR",
       "execution_count": 40,
