--- a/assignment/assignment.ipynb
+++ b/assignment/assignment.ipynb
@@ -58,7 +58,7 @@
         "id": "8yd_2lXDkkv2"
       },
       "id": "8yd_2lXDkkv2",
-      "execution_count": 3,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -82,7 +82,7 @@
         "id": "aDtB64OXBlL_"
       },
       "id": "aDtB64OXBlL_",
-      "execution_count": 4,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -111,7 +111,7 @@
         "id": "5Lr4Y8dxFM2t"
       },
       "id": "5Lr4Y8dxFM2t",
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -142,7 +142,7 @@
         "id": "9JcZaoxyL_5n"
       },
       "id": "9JcZaoxyL_5n",
-      "execution_count": 6,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -168,10 +168,10 @@
           "height": 335
         },
         "id": "t_runTABOCtq",
-        "outputId": "0e9596f1-d6b6-41f1-9444-af9edd730e1a"
+        "outputId": "6c324e34-3953-44cb-fcee-300f6b9bf814"
       },
       "id": "t_runTABOCtq",
-      "execution_count": 7,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -248,7 +248,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 5
         }
       ]
     },
@@ -284,10 +284,10 @@
           "height": 692
         },
         "id": "hQnwR8uDO0tV",
-        "outputId": "bbc708bd-9b3c-4bb8-c629-342989b6600f"
+        "outputId": "4c0aca6a-dd79-4ac6-fc74-e0e5c9cf60f0"
       },
       "id": "hQnwR8uDO0tV",
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -316,7 +316,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 6
         },
         {
           "output_type": "display_data",
@@ -381,10 +381,10 @@
           "height": 472
         },
         "id": "oMNxL4w2jiI0",
-        "outputId": "527fb01d-c9e1-4e56-b6b3-0ef34e183c56"
+        "outputId": "f4254a11-fd6a-498c-f84a-dd5254db1488"
       },
       "id": "oMNxL4w2jiI0",
-      "execution_count": 9,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -438,10 +438,10 @@
           "height": 178
         },
         "id": "S2xQc188j0Lb",
-        "outputId": "946cee98-39e7-401d-f026-e517e820d429"
+        "outputId": "a7b96fad-c6fc-4654-8543-851157c125a2"
       },
       "id": "S2xQc188j0Lb",
-      "execution_count": 10,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -493,7 +493,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 8
         }
       ]
     },
@@ -537,10 +537,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 209
         },
-        "outputId": "f774ded8-b7be-42ee-aa12-adcf0c6efe1b"
+        "outputId": "dbefd1f9-30f6-4356-f623-34e87517f054"
       },
       "id": "ssFltkNsj1Mm",
-      "execution_count": 32,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -597,7 +597,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 32
+          "execution_count": 9
         }
       ]
     },
@@ -639,10 +639,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 209
         },
-        "outputId": "1b5500b2-9b5c-4360-d3c5-84ff50b87e5b"
+        "outputId": "4b629fa5-8996-4efb-aaa3-a895927fc2bc"
       },
       "id": "fRbyrNEiyqr9",
-      "execution_count": 34,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -699,7 +699,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 34
+          "execution_count": 10
         }
       ]
     },
@@ -729,10 +729,10 @@
           "base_uri": "https://localhost:8080/",
           "height": 303
         },
-        "outputId": "f6a48d1b-4c7b-4000-bb41-366ce332b704"
+        "outputId": "c8e32bf8-93d8-42d3-84cb-7f0cfff3a833"
       },
       "id": "_0lYzsBdyusI",
-      "execution_count": 38,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -810,7 +810,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 11
         }
       ]
     },
@@ -842,10 +842,10 @@
           "height": 397
         },
         "id": "BLPoNhl-Azpq",
-        "outputId": "751ac5d1-a6b5-4d56-b3a0-8ff777bda090"
+        "outputId": "2e99490e-0062-4f37-8315-db6c676deb6b"
       },
       "id": "BLPoNhl-Azpq",
-      "execution_count": 41,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -939,7 +939,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 41
+          "execution_count": 12
         }
       ]
     },
@@ -974,10 +974,10 @@
           "height": 303
         },
         "id": "0ByGUrNlA5YR",
-        "outputId": "4f9445d1-b08b-487e-cdc6-67da38430ba3"
+        "outputId": "a60571e8-468e-435d-88d5-10be7629f8d8"
       },
       "id": "0ByGUrNlA5YR",
-      "execution_count": 40,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1055,22 +1055,61 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 13
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "9. What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)\n",
+        "\n",
+        "\n",
+        "The proportion is 446 / 3557 (white sharks/total sharks) or 12% white sharks\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "R81nWepfJYVG"
+      },
+      "id": "R81nWepfJYVG"
     },
     {
       "cell_type": "code",
       "source": [
         "# 9. What proportion of attacks appear to be by white sharks? (Hint: `str.split()` makes a vector of text values into a list of lists, split by spaces.)\n",
-        "\n"
+        "\n",
+        "fatal_changed['Species '] = fatal_changed['Species '].str.strip()\n",
+        "\n",
+        "white_shark_count = 0\n",
+        "total_shark_count = 0\n",
+        "for i in fatal_changed['Species ']:\n",
+        "  if type(i) == str and 'white shark' in i.lower():\n",
+        "    #print(i)\n",
+        "    white_shark_count += 1\n",
+        "  total_shark_count += 1\n",
+        "\n",
+        "print(white_shark_count, \"/\", total_shark_count)\n",
+        "print(int((white_shark_count/total_shark_count) * 100),'%')"
       ],
       "metadata": {
-        "id": "UdgzetlHyvmU"
+        "id": "UdgzetlHyvmU",
+        "outputId": "568d7084-c443-4914-9c75-e0bebd46ec4b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "id": "UdgzetlHyvmU",
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "446 / 3557\n",
+            "12 %\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
